# team-maturity

./: .dockerignore  .gitignore  Dockerfile  fly.toml  maturity.db.bak  pyproject.toml  render.yaml  requirements.txt  seed_dummy.py  seed_mock_data.py  start.sh
.claude/: launch.json
app/: auth.py  database.py  eng_statistics.py  main.py  models.py  seed.py  statistics.py
app/routes/: admin.py  dashboard.py  engineering.py  survey.py
app/static/: charts.js  preview_1_retro.html  preview_2_skeu.html  preview_3_brutal.html  style.css  trend-chart.js
app/templates/: admin.html  base.html  base_cozy.html  base_public.html  base_terminal.html  dashboard.html  engineering_dashboard.html  engineering_survey.html  engineering_thanks.html  index.html  login.html  survey.html  team_dashboard.html  team_view.html  thanks.html
data/: engineering_delivery_assessment.csv  questions.csv
tests/: conftest.py  test_data_isolation.py  test_eng_statistics.py  test_routes.py  test_statistics.py
