[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-maturity-assessment"
version = "0.1.0"
description = "Team Maturity Assessment survey tool with dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
team-maturity = "app.main:cli"

[tool.setuptools.packages.find]
include = ["app*"]
